--- a/PlottedAssist/Views/Dashboard/Create.cshtml
+++ b/PlottedAssist/Views/Dashboard/Create.cshtml
@@ -8,7 +8,7 @@
 
 <!--Header-->
 
-<div class="col-12 col-md-12" style="padding:0;background-image:url(../../Picture/Banner/MyGardenBanner.jpg);width:100%;margin:0;padding-bottom:10%;background-repeat:no-repeat;background-size:100%">
+<div class="col-md-12" style="padding:0;background-image:url(../../Picture/Banner/MyGardenBanner.jpg);width:100%;margin:0;padding-bottom:10%;background-repeat:no-repeat;background-size:100%">
     <div>
         <img src="~/Picture/Banner/MyGardenTitle.png" style="width:25%;margin-top:13%;margin-left:37%">
     </div>
