--- a/PlottedAssist/Views/Home/Index.cshtml
+++ b/PlottedAssist/Views/Home/Index.cshtml
@@ -3,11 +3,12 @@
 }
 
 <!--Header-->
-<div class="row" style="padding:0;background:url(../Picture/homepage_header.jpg) center;margin:0;padding-bottom:13%;background-repeat:no-repeat;background-size:100%">
-    <div>
-        <img src="~/Picture/Banner/Homepage_title.png" style="width:35%;margin-top:15%;margin-left:33%">
+    <div class="row" style="padding:0;background:url(../Picture/homepage_header.jpg) center;margin:0;padding-bottom:13%;background-repeat:no-repeat;background-size:100%;text-align:center;">
+        <div>
+            <img src="~/Picture/Banner/Homepage_title.png" style="width:35%;margin-top:15%">
+        </div>
+        <a href="#service" class="home-btn white-word" style="">Our Service</a>
     </div>
-</div>
 
 <!--body-->
 <div class="col-xs-12" style="margin-bottom:20px;text-align:center;background-color:#6D917A;">
@@ -38,7 +39,7 @@
     </div>
     </div>
 </div>
-<div class="col-xs-12 col-md-10 col-md-offset-1" style="margin-bottom:100px;text-align:center; ">
+<div id="service" class="col-xs-12 col-md-10 col-md-offset-1" style="margin-bottom:100px;text-align:center; ">
     <!--Our Services-->
     <h2 class="white-word col-xs-12" style="text-align:center;">Our Services</h2>
     <div style="width:300px; height:3px; background-color:white;margin:0 auto;margin-top:70px;"></div>
