--- a/PlottedAssist/Views/PlantSets/PlantList.cshtml
+++ b/PlottedAssist/Views/PlantSets/PlantList.cshtml
@@ -13,7 +13,7 @@
 
         <!--Header-->
 
-        <div class="col-12 col-md-12" style="padding:0;background-image:url(../../Picture/Banner/IndigenousPlantBanner.jpg);width:100%;margin:0;padding-bottom:10%;background-repeat:no-repeat;background-size:100%">
+        <div class="col-md-12" style="padding:0;background-image:url(../../Picture/Banner/IndigenousPlantBanner.jpg);width:100%;margin:0;padding-bottom:10%;background-repeat:no-repeat;background-size:100%">
             <div>
                 <img src="~/Picture/Banner/IndTitleWeb.png" style="width:35%;margin-top:15%;margin-left:33%">
             </div>
@@ -24,7 +24,7 @@
         <!--Filter-->
         @using (Ajax.BeginForm("GetPlantData", ajaxOpts))
         {
-            <div class="col-12 col-sm-12 col-md-12 col-lg-12" style="text-align: center; margin-top: 20px;margin-bottom:80px; position: relative">
+            <div class="col-md-12" style="text-align: center; margin-top: 20px;margin-bottom:80px; position: relative">
                 <div class="btn-group-lg" role="group" aria-label="..." style="margin-top:20px;position:relative">
                     <h4 class="white-word">Plant type</h4>
 
