--- a/PlottedAssist/Views/PlantInfo/SoilTypes.cshtml
+++ b/PlottedAssist/Views/PlantInfo/SoilTypes.cshtml
@@ -24,7 +24,7 @@
 <body>
     <div class="row" style="background-color:#4F6657;">
         <!--Header-->
-        <div class="col-12 col-md-12" style="padding:0;background-image:url(../../Picture/Banner/PlantingInfoBanner.jpg);width:100%;margin:0;padding-bottom:10%;background-repeat:no-repeat;background-size:100%">
+        <div class="col-md-12" style="padding:0;background-image:url(../../Picture/Banner/PlantingInfoBanner.jpg);width:100%;margin:0;padding-bottom:10%;background-repeat:no-repeat;background-size:100%">
             <div>
                 <img src="~/Picture/Banner/otherinfoTitleWeb.png" style="width:35%;margin-top:15%;margin-left:33%">
             </div>
