--- a/PlottedAssist/Views/PlantSets/TestResult.cshtml
+++ b/PlottedAssist/Views/PlantSets/TestResult.cshtml
@@ -9,13 +9,7 @@
 
         <!--Header-->
 
-        <div class="col-12 col-md-12" style="        padding: 0;
-        background-image: url(../../Picture/Banner/IndigenousPlantBanner.jpg);
-        width: 100%;
-        margin: 0;
-        padding-bottom: 10%;
-        background-repeat: no-repeat;
-        background-size: 100%">
+        <div class="col-md-12" style="padding: 0;background-image: url(../../Picture/Banner/IndigenousPlantBanner.jpg); width: 100%;margin: 0;padding-bottom: 10%; background-repeat: no-repeat;background-size: 100%">
             <div>
                 <img src="~/Picture/Banner/IndTitleWeb.png" style="width:35%;margin-top:15%;margin-left:33%">
             </div>
@@ -27,8 +21,12 @@
             <a class="btn btn-success" name="Submit" onclick="javascript:history.back(1)" style="margin-top:50px"><span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>Back</a>
         </div>
         
-        @if (Model.ToList.Length = 0) { 
+        @if (ViewBag.noResult == "0") {
+            <div class="white-word" style="margin-bottom:75px;text-align:center">
+                <h2>sorry, did not find the result you want.</h2>
+        </div>
         }
+        else { 
 
         <div class="white-word" style="margin-bottom:75px;text-align:center">
             <h2>Based on your preference, here is eligible indigenous plants what we found.</h2>
@@ -51,4 +49,5 @@
                 </div>
             }
         </div>
+        }
             
