--- a/PlottedAssist/Views/WeedSets/WeedFilter.cshtml
+++ b/PlottedAssist/Views/WeedSets/WeedFilter.cshtml
@@ -13,14 +13,7 @@
     <!--Header-->>
 
 
-    <div class="col-12 col-md-12" style="        padding: 0;
-        background-image: url(../../Picture/Banner/InvasivePlantBanner.jpg);
-        width: 100%;
-        margin: 0;
-        padding-bottom: 10%;
-        background-repeat: no-repeat;
-        background-size: 100%
-">
+    <div class="col-md-12" style="padding: 0;background-image: url(../../Picture/Banner/InvasivePlantBanner.jpg);width: 100%;margin: 0;padding-bottom: 10%;background-repeat: no-repeat;background-size: 100%">
         <div>
             <img src="~/Picture/Banner/InvTitleWeb.png" style="width:35%;margin-top:15%;margin-left:33%">
         </div>
