--- a/PlottedAssist/Views/Home/Index.cshtml
+++ b/PlottedAssist/Views/Home/Index.cshtml
@@ -39,7 +39,7 @@
     </div>
     </div>
 </div>
-<div id="service" class="col-xs-12 col-md-10 col-md-offset-1" style="margin-bottom:100px;text-align:center; ">
+<div id="service" class="col-xs-12 col-md-10 col-md-offset-1" style="margin-bottom:100px;padding-top:50px; text-align:center; ">
     <!--Our Services-->
     <h2 class="white-word col-xs-12" style="text-align:center;">Our Services</h2>
     <div style="width:300px; height:3px; background-color:white;margin:0 auto;margin-top:70px;"></div>
