--- a/PlottedAssist/Views/PlantSets/Instrction.cshtml
+++ b/PlottedAssist/Views/PlantSets/Instrction.cshtml
@@ -14,7 +14,7 @@
 
 <div style="background-image:url(../../Picture/Tooltip.jpg);padding-bottom:50%;background-repeat:no-repeat;background-size:100% 100%;">    
     <div>        
-        <h1 style="font-size:16px;padding-top:75px;margin-left:1%"><a href="@Url.Content("~/PlantSets/Index/")" style="color:#FDB298;">< Back to Questionnaire</a></h1>
+        <h1 style="font-size:16px;padding-top:75px;margin-left:1%"><a onclick="javascript:history.back(1)" style="color:#FDB298;">< Back to Questionnaire</a></h1>
     </div>
 </div>
 
