--- a/PlottedAssist/Views/Dashboard/Edit.cshtml
+++ b/PlottedAssist/Views/Dashboard/Edit.cshtml
@@ -44,7 +44,7 @@
         <div class="col-md-4">
             @Html.EditorFor(model => model.PlantWaterFrq, new { htmlAttributes = new { @class = "form-control" } })
             Recommended frequency: @Html.DisplayFor(model => model.PlantSet.PlantWaterFrq) Days
-            
+
         </div>
         <div class="col-md-4" style="margin-left:-10%">
             @Html.ValidationMessageFor(model => model.PlantWaterFrq, "", new { @class = "text-white" })
@@ -56,7 +56,7 @@
         <div class="col-md-4">
             @Html.EditorFor(model => model.PlantPruningFrq, new { htmlAttributes = new { @class = "form-control" } })
             Recommended frequency: @Html.DisplayFor(model => model.PlantSet.PlantPruningFrq) Days
-            
+
         </div>
         <div class="col-md-4" style="margin-left:-10%">
             @Html.ValidationMessageFor(model => model.PlantPruningFrq, "", new { @class = "text-white" })
@@ -68,7 +68,7 @@
         <div class="col-md-4">
             @Html.EditorFor(model => model.PlantFertilizerFrq, new { htmlAttributes = new { @class = "form-control" } })
             Recommended frequency: @Html.DisplayFor(model => model.PlantSet.PlantFertilizerFrq) Days
-            
+
         </div>
         <div class="col-md-4" style="margin-left:-10%">
             @Html.ValidationMessageFor(model => model.PlantFertilizerFrq, "", new { @class = "text-white" })
@@ -80,22 +80,20 @@
         <div class="col-md-4">
             @Html.EditorFor(model => model.PlantMistFrq, new { htmlAttributes = new { @class = "form-control" } })
             Recommended frequency: @Html.DisplayFor(model => model.PlantSet.PlantMistFrq) Days
-            
+
         </div>
         <div class="col-md-4" style="margin-left:-10%">
             @Html.ValidationMessageFor(model => model.PlantMistFrq, "", new { @class = "text-white" })
         </div>
     </div>
 
-    <div class="col-sm-3 col-xs-2 col-md-2" style="color:black;font-family:'Arial';font-size:16PX;padding-left:20%;">
-        <a class="btn btn-success" name="Submit" onclick="javascript:history.back(1)"><span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>back to list</a>
-    </div>
-
-    <div class="form-group">
-        <div class="col-md-offset-1 col-md-2">
+    <div class="col-xs-12" style="color:black;font-family:'Arial';font-size:16PX;padding-left:20%;margin-bottom:70px;">
+        <div class="form-group">
+            <a class="btn btn-success" name="Submit" onclick="javascript:history.back(1)"><span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>Back</a>
             <input type="submit" value="Save" class="btn btn-default" />
         </div>
     </div>
+    
 </div>
     }
     
