--- a/PlottedAssist/Views/Home/Index.cshtml
+++ b/PlottedAssist/Views/Home/Index.cshtml
@@ -52,7 +52,7 @@
             <div class="col-xs-12 col-md-8 col-md-offset-0 white-word" style="margin-top:30px; text-align:center;">
                 <h3 style="text-align:center;font-weight:bold">Invasive Plants</h3>
                 <p style="font-size:16px;">Look out for invasive plants in your garden. Protect your garden from them. Learn control and disposal techniques for invasive plants. See alternative indigenous plants.</p>
-                <a class="btn btn-success" href="@Url.Content("~/WeedSets/Index")" style="background: #6D917A; color:white; text-align: center;border-radius:10px;box-shadow:2px 2px 6px 2px #1E2621;border:0px;margin-bottom:30px;width:100px;height:30px;margin-top:20px">Learn more</a>
+                <a class="btn btn-success" href="@Url.Content("~/WeedSets/Index")" style="background: #344239; color:white; text-align: center;border-radius:10px;box-shadow:2px 2px 6px 2px #1E2621;border:0px;margin-bottom:30px;width:100px;height:30px;margin-top:20px">Learn more</a>
             </div>
         </div>
     </div>
@@ -63,7 +63,7 @@
             <div class="col-xs-12 col-md-8 col-md-offset-4 white-word" style="margin-top:30px; text-align:center;">
                 <h3 style="text-align:center;font-weight:bold">Plant List</h3>
                 <p style="font-size:16px;">Search native local plants based on your preference. Improve your understanding of those plants before you start growing them. Select plants for your garden.</p>
-                <a class="btn btn-success" href="@Url.Content("~/PlantSets/Index")" style="background: #6D917A; color:white; text-align: center;border-radius:10px;box-shadow:2px 2px 6px 2px #1E2621;border:0px;margin-bottom:30px;width:100px;height:30px;margin-top:20px">Learn more</a>
+                <a class="btn btn-success" href="@Url.Content("~/PlantSets/Index")" style="background: #344239; color:white; text-align: center;border-radius:10px;box-shadow:2px 2px 6px 2px #1E2621;border:0px;margin-bottom:30px;width:100px;height:30px;margin-top:20px">Learn more</a>
             </div>
         </div>
         <div class="col-xs-12 col-md-6" style="margin: 0 auto;">
@@ -79,7 +79,7 @@
             <div class="col-xs-12 col-md-8 col-md-offset-0 white-word" style="margin-top:30px; text-align:center;">
                 <h3 style="text-align:center;font-weight:bold">My Garden</h3>
                 <p style="font-size:16px;">Help to keep track of caring activities that are customized when you started growing the plants. Check and reschedule plants in your garden.</p>
-                <a class="btn btn-success" href="@Url.Content("~/DashBoard/Index")" style="background: #6D917A; color:white; text-align: center;border-radius:10px;box-shadow:2px 2px 6px 2px #1E2621;border:0px;margin-bottom:30px;width:100px;height:30px;margin-top:20px">Learn more</a>
+                <a class="btn btn-success" href="@Url.Content("~/DashBoard/Index")" style="background: #344239; color:white; text-align: center;border-radius:10px;box-shadow:2px 2px 6px 2px #1E2621;border:0px;margin-bottom:30px;width:100px;height:30px;margin-top:20px">Learn more</a>
             </div>
         </div>
     </div>
@@ -90,7 +90,7 @@
             <div class="col-xs-12 col-md-8 col-md-offset-4 white-word" style="margin-top:30px; text-align:center;">
                 <h3 style="text-align:center;font-weight:bold">Gardening Guidance</h3>
                 <p style="font-size:16px;">Gain access to information that will improve your gardening experience. Understand different techniques that you can do by yourself to help your garden.</p>
-                <a class="btn btn-success" href="@Url.Content("~/PlantInfo/PlantInfo")" style="background: #6D917A; color:white; text-align: center;border-radius:10px;box-shadow:2px 2px 6px 2px #1E2621;border:0px;margin-bottom:30px;width:100px;height:30px;margin-top:20px">Learn more</a>
+                <a class="btn btn-success" href="@Url.Content("~/PlantInfo/PlantInfo")" style="background: #344239; color:white; text-align: center;border-radius:10px;box-shadow:2px 2px 6px 2px #1E2621;border:0px;margin-bottom:30px;width:100px;height:30px;margin-top:20px">Learn more</a>
             </div>
         </div>
         <div class="col-xs-12 col-md-6" style="margin:0 auto;">
