--- a/PlottedAssist/Views/PlantInfo/Nurseries.cshtml
+++ b/PlottedAssist/Views/PlantInfo/Nurseries.cshtml
@@ -25,7 +25,7 @@
                 <li>They save your time and hassle. Since the nursery employees look after the plants, all you need to do is just pick them up and place them in your home.</li>
             </ul>
             <p>Looking forward to shop from a nursery or a garden centre near you? Here are the location of local garden centres and nurseries.</p>
-            <p>at the moment we only provide nursery location in city of yarra.</p>
+            <p>At the moment we only provide nursery location in citty of Yarra. We will update more in the future.</p>
             <br>
         </div>                           
     </div>
