--- a/PlottedAssist/Views/Dashboard/Edit.cshtml
+++ b/PlottedAssist/Views/Dashboard/Edit.cshtml
@@ -30,14 +30,15 @@
     @Html.HiddenFor(model => model.Active)
 
 
-    <div class="form-group">
-        <div class="control-label col-sm-2">Plant Nick Name</div>
-        <div class="col-md-10">
-            @Html.EditorFor(model => model.plantNickName, new { htmlAttributes = new { @class = "form-control" } })
-
-            @Html.ValidationMessageFor(model => model.plantNickName, "", new { @class = "text-white" })
-        </div>
+<div class="form-group">
+    <div class="control-label col-sm-2">Plant Nick Name</div>
+    <div class="col-md-4">
+        @Html.EditorFor(model => model.plantNickName, new { htmlAttributes = new { @class = "form-control" } })
     </div>
+    <div class="col-md-6">
+        @Html.ValidationMessageFor(model => model.plantNickName, "", new { @class = "text-white" })
+    </div>
+</div>
 
     <div class="form-group">
         <div class="control-label col-sm-2">Water Frquency</div>
@@ -46,7 +47,7 @@
             Recommended frequency: @Html.DisplayFor(model => model.PlantSet.PlantWaterFrq) Days
 
         </div>
-        <div class="col-md-4" style="margin-left:-10%">
+        <div class="col-md-6" >
             @Html.ValidationMessageFor(model => model.PlantWaterFrq, "", new { @class = "text-white" })
         </div>
     </div>
@@ -58,7 +59,7 @@
             Recommended frequency: @Html.DisplayFor(model => model.PlantSet.PlantPruningFrq) Days
 
         </div>
-        <div class="col-md-4" style="margin-left:-10%">
+        <div class="col-md-6" >
             @Html.ValidationMessageFor(model => model.PlantPruningFrq, "", new { @class = "text-white" })
         </div>
     </div>
@@ -70,7 +71,7 @@
             Recommended frequency: @Html.DisplayFor(model => model.PlantSet.PlantFertilizerFrq) Days
 
         </div>
-        <div class="col-md-4" style="margin-left:-10%">
+        <div class="col-md-6" >
             @Html.ValidationMessageFor(model => model.PlantFertilizerFrq, "", new { @class = "text-white" })
         </div>
     </div>
@@ -82,17 +83,20 @@
             Recommended frequency: @Html.DisplayFor(model => model.PlantSet.PlantMistFrq) Days
 
         </div>
-        <div class="col-md-4" style="margin-left:-10%">
+        <div class="col-md-6" >
             @Html.ValidationMessageFor(model => model.PlantMistFrq, "", new { @class = "text-white" })
         </div>
     </div>
 
-    <div class="col-xs-12" style="color:black;font-family:'Arial';font-size:16PX;padding-left:20%;margin-bottom:70px;">
-        <div class="form-group">
+    <div class="form-group">
+        <div class="col-sm-2">
             <a class="btn btn-success" name="Submit" onclick="javascript:history.back(1)"><span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>Back</a>
+        </div>
+        <div class="col-md-10">
             <input type="submit" value="Save" class="btn btn-default" />
         </div>
     </div>
+    
     
 </div>
     }
