--- a/PlottedAssist/Views/Home/Index.cshtml
+++ b/PlottedAssist/Views/Home/Index.cshtml
@@ -26,15 +26,9 @@
         </p>
     </div>
     <div class="col-xs-12 col-md-4" style="padding:30px">
-        <h2 class="white-word">Indigenous plants also:</h2>
+        <h2 class="white-word">Benefits of indigenous plants</h2>
         <p class="white-word">
-            - provide habitat, shelter, and food for local wildlife.<br>
-            - require less water and money.<br>
-            - support a healthy environment.<br>
-            - improve biodiversity.<br>
-            - are our heritage – we can help preserve them.<br>
-            - are attractive plants with less maintenance.<br>
-            - get less plant disease and more pest resistance.
+            Indigenous plants provide habitat, shelter, and food for local wildlife and help to improve biodiversity. They require less water and they get less plant disease and have more pest resistance. They are attractive plants with less maintenance. They are our heritage and we can help preserve them.
         </p>
     </div>
     </div>
