--- a/PlottedAssist/Views/PlantSets/TestResult.cshtml
+++ b/PlottedAssist/Views/PlantSets/TestResult.cshtml
@@ -23,13 +23,13 @@
         
         @if (ViewBag.noResult == "0") {
             <div class="white-word" style="margin-bottom:75px;text-align:center">
-                <h2>Sorry, we can't find plant available for your preferences.</h2>
+                <h2>Sorry, we couldn't find any plants based on your preferences.</h2>
         </div>
         }
         else { 
 
         <div class="white-word" style="margin-bottom:75px;text-align:center">
-            <h2>Based on your preference, here is eligible indigenous plants what we found.</h2>
+            <h2>Based on your preference, here is the list of indigenous plants that we have found.</h2>
         </div>
         
         <div class="col-md-10 col-md-offset-1">
